fix: title size on mobile devices

--- a/src/components/Style.css
+++ b/src/components/Style.css
@@ -38,6 +38,13 @@ nav {
     text-transform: uppercase; 
   }
 
+  @media (max-width: 768px) {
+    .text-box h1,
+    .text-box h2 {
+      font-size: 25px; 
+    }
+  }
+
   .text-box h2 {
     text-align: center;
     text-transform: uppercase; 
